--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcLaptopContext": "Server=Katesi\\MSSQLSERVER2022;Database=DB_laptop1;User Id=sa;Password=123456;Encrypt=False;TrustServerCertificate=True;Trusted_Connection=False;MultipleActiveResultSets=True;"
+    "MvcLaptopContext": "Server=Katesi\\MSSQLSERVER2022;Database=DB_laptop1;User Id=sa;Password=123456;Encrypt=False;TrustServerCertificate=True;Trusted_Connection=False;MultipleActiveResultSets=True;",
+    "MvcLaptopIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MvcLaptop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "VnPay": {
     "TmnCode": "J1971Y10",
