--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -17,6 +17,6 @@
     "Command": "pay",
     "CurrCode": "VND",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "https://localhost:5187/Pays/PaymentCallBack"
+    "PaymentBackReturnUrl": "http://localhost:5187/Cart/PaymentCallBack"
   }
 }
