update order user,admin

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,8 +10,8 @@
     "MvcLaptopContext": "Server=Katesi\\MSSQLSERVER2022;Database=DB_laptop1;User Id=sa;Password=123456;Encrypt=False;TrustServerCertificate=True;Trusted_Connection=False;MultipleActiveResultSets=True;"
   },
   "VnPay": {
-    "TmnCode": "J1971Y10",
-    "HashSecret": "9EPRMIVLS6281FMIZR5K10JVC4MQ8L5A",
+    "TmnCode": "HNM3KJQW",
+    "HashSecret": "IO2ATD91WGM7ICGE57QBISXWBPM3DH69",
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "Version": "2.1.0",
     "Command": "pay",
